src/index.css
:root {
  --player-one-color: #f00;
  --player-two-color: #00f;
}

body {
  font: 14px "Century Gothic", Futura, sans-serif;
  margin: 20px;
}

.board {
  width: 546px;
  height: 520px;
  margin: 48px auto;
}

.turn-label {
  text-align: center;
}

.turn-label.player-one {
  color: var(--player-one-color);
}

.turn-label.player-two {
  color: var(--player-two-color);
}

.square {
  background: #fff;
  border: 1px solid #999;
  height: 68px;
  margin: 4px;
  width: 68px;
  border-radius: 34px;
}

.square.player-one {
  background: var(--player-one-color);
}

.square.player-two {
  background: var(--player-two-color);
}

.column {
  display: inline-block;
  margin-bottom: 40px;
}

.winner-announce-background {
  position: absolute;
  width: inherit;
  height: inherit;
  background-color: hsl(120, 0%, 100%, 90%);
  text-align: center;
}

.winner-announce {
  padding-top: 152px;
}

